# checker-fxxker

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: ci.yaml
src/: config.py
src/sites/: hanime.py  p1a3.py  soushuba.py  southplus.py
src/utils/: cookie.py  logging.py
